Fixed navbar dropdown appearance on small screens

--- a/app/assets/stylesheets/bootstrap_variables.css.scss
+++ b/app/assets/stylesheets/bootstrap_variables.css.scss
@@ -7,4 +7,5 @@ $navbar-default-link-active-color: #555;
 $navbar-default-link-hover-color: #333;
 
 $grid-float-breakpoint: $screen-sm-max;
+$grid-float-breakpoint-max: $grid-float-breakpoint - 1;
 
